tests/paczka1/fuzzy1/20255554.err
Error in line 15: Hv1FYMC6s S112 68,2
Error in line 16: Hv1FYMC6s S113 56,7
Error in line 12: Jtx S731 93,4
Error in line 33: Jtx S112 97,8
Error in line 39: S731 S112 82,8
